<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">自游行</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>

    <string name="navigation">导航</string>
    <string name="strategy">攻略</string>
    <string name="personal">我的</string>

    <!--login activity-->
    <string name="signup">注册/登录</string>
    <string name="account_hint">手机号</string>
    <string name="username">用户名</string>
    <string name="passsword">密码</string>
    <string name="signin">登录</string>
    <string name="error_invalid_phone">请填写正确的手机号</string>
    <string name="title_activity_signin">注册</string>
    <string name="title_activity_confirpassword">登录</string>
    <string name="num_and_character">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--sign up activity-->
    <string name="new_phone_number">请输入手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirn_password">再次输入密码</string>
    <string name="pleas_input_correct_code">请输入正确的验证码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="next">下一步</string>
    <string name="operation_signin">注册</string>
    <string name="finish_signup">完成</string>
    <string name="password_too_short">密码不够长哦^_^</string>
    <string name="password_too_long">密码太长会忘的ˇˍˇ</string>
    <string name="password_confirn_failed">两次输入的密码不同</string>
    <string name="forget_input_nickname">给自己起个大名吧！</string>

    <!--personal frgment-->
    <string name="personal_offline_map_manager">离线地图</string>
    <string name="personal_detail_info">详细信息</string>

    <!--offline map-->
    <string name="check_offline_map">查看</string>
    <string name="offline_map_downloaded">已下载</string>
    <string name="offline_map_update">可更新</string>
    <string name="title_activity_offline_map_manage">离线地图</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>