<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context="com.siyiping.gotrip.ui.ConfirpasswordActivity"
    android:orientation="vertical"
    >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_nickname"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:hint="@string/please_input_nickname"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:hint="@string/please_input_password"
            android:digits="@string/num_and_character"
            android:layout_marginTop="20dp"/>




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_confirn_password"
            android:hint="@string/please_confirn_password"
            android:digits="@string/num_and_character"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"/>


</LinearLayout>
