<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.siyiping.gotrip.ui.Signup">


    <LinearLayout android:id="@+id/signup_panel" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_nickname"
            android:inputType="textFilter"

            android:background="@null"
            android:layout_marginTop="8dp"
            android:hint="@string/please_input_nickname"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:editable="false"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            android:hint="@string/please_input_password"
            android:digits="@string/num_and_character"
            android:layout_marginTop="8dp"/>




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_confirn_password"
            android:inputType="textPassword"
            android:hint="@string/please_confirn_password"
            android:digits="@string/num_and_character"
            android:editable="false"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"/>


            <AutoCompleteTextView android:id="@+id/new_account_phone" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" android:maxLines="1"
                android:singleLine="true"
                android:digits="0123456789"
                android:editable="false"
                android:hint="@string/new_phone_number"
                android:layout_marginTop="8dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#CCCCCC"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <EditText android:id="@+id/verification_code" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:editable="false"
                    android:hint="@string/please_input_verification_code"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginTop="8dp" />


                <Button
                    android:id="@+id/getcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_verification_code"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#CCCCCC"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_signup"
                android:id="@+id/finish_signup"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/solidbutton"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:enabled="false" />


    </LinearLayout>

</LinearLayout>
