<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.siyiping.gotrip.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center" android:visibility="gone" />



    <LinearLayout android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    />

                <AutoCompleteTextView android:id="@+id/account" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#CCCCCC"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/passsword"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/login"
                    android:layout_weight="8"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#CCCCCC"/>

            <Button android:id="@+id/phone_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/signin"
                android:background="@drawable/filletbutton"
                android:textStyle="bold"
                android:enabled="false"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

